--- a/menu/kra-admin.html
+++ b/menu/kra-admin.html
@@ -1,125 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-"http://www.w3.org/TR/html4/loose.dtd">
-<head>
-<title>3 Col Stretch</title>
-<link href="css/portal.css" rel="stylesheet" type="text/css">
-<script type="text/javascript">
-<!--
-function MM_openBrWindow(theURL,winName,features) { //v2.0
-  window.open(theURL,winName,features);
-}
-//-->
-</script>
-</head>
-<body>
-<form  method="post" action="">
-  <div id="header">
-    <h1 class="kra"><span>Kuali</span></h1>
-  </div>
-  <div id="feedback"><a class="portal_link" href="#" target="_blank" title="Provide Feedback">Provide Feedback</a> </div>
-  <div id="build">build-172</div>
-  <div class="header2">
-    <div class="header2-left-focus">
-      <div class="breadcrumb-focus"><a href="#"><img src="images-portal/icon-port-actionlist.gif" alt="action list" hspace="2" border="0"></a><img src="images-portal/icon-port-docsearch.gif" alt="action list" width="96" height="19" hspace="2" border="0"></a></div>
-    </div>
-  </div>
-  <div id="login-info"> Logged in User: SCALLIS</div>
-  <!--   <div id="topcontrols"><input name="textfield" type="text" size="12" class="loginbox"><input name="imageField" src="images/tinybutton-login.gif" type="image" border="0" height="15" width="48" class="loginbutton">
-  </div> -->
-  <div id="search">
-    <input name="textfield" type="text" size="12" class="loginbox">
-    <input class="go" type="submit" name="Submit" value="login">
-  </div>
-  <div id="tabs" class="tabposition">
-    <ul>
-      <li class="green"><a class="green" href="kra-main.html">Main</a></li>
-      <li class="green"><a class="green" href="kra-mystuff2.html">My Stuff</a></li>
-      <li class="green"><a class="green" href="kra-maint.html">Maintenance</a></li>
-      <li class="red"><a class="red" href="kra-admin.html">Administration</a></li>
-    </ul>
-  </div>
-  <table id="iframe_portlet_container_table" border="0" cellpadding="0" cellspacing="0" width="100%">
-    <tbody>
-      <tr bgcolor="#ffffff" valign="top">
-        <td class="leftback-focus" width="15">&nbsp;</td>
-        <td class="content" valign="top"><div class="portlet">
-            <div class="header"> <span class="left">
-              <div class="portlet-title">
-                <h2 class="portlet-title">System</h2>
-              </div>
-            </span> <span class="right"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" hspace="3" vspace="4" border="0" align="absmiddle" onClick="MM_openBrWindow('final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
-            <div class="chan-contain">
-              <div class="body">
-                <ul class="chan">
-                  <li><a href="kra-admin-EmployeeStatus.html">Employee Status</a> </li>
-                  <li><a href="kra-admin-EmployeeType.html">Employee Type</a> </li>
-                  <li><a href="kra-admin-MessageOfTheDay.html">Message Of The Day</a> </li>
-                  <li><a href="kra-admin-Parameter.html">Parameter</a> </li>
-                  <li><a href="kra-admin-ParameterComponent.html">Parameter Component</a> </li>
-                  <li><a href="kra-admin-ParameterModule.html">Parameter Module</a> </li>
-                  <li><a href="kra-admin-ParameterType.html">Parameter Type</a> </li>
-                  <li><a href="kra-admin-SystemOptions.html">System Options</a> </li>
-                  <li><a href="kra-admin-User.html">User</a> </li>
-                </ul>
-              </div>
-          </div>
-        </div></td>
-        <td class="content" valign="top"><div class="portlet">
-            <div class="header"> <span class="left">
-              <div class="portlet-title">
-                <h2 class="portlet-title">Batch</h2>
-              </div>
-            </span> <span class="right"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" hspace="3" vspace="4" border="0" align="absmiddle" onClick="MM_openBrWindow('final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
-            <div class="chan-contain">
-              <div class="body">
-                <ul class="chan">
-                  <li><a href="kra-admin-batch-schedule.html">Batch Schedule</a></li>
-                </ul>
-              </div>
-          </div>
-        </div>        <div class="portlet">
-<div class="header"> <span class="left">
-            <div class="portlet-title">
-              <h2 class="portlet-title">Service Bus</h2>
-            </div>
-            </span> <span class="right"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" hspace="3" vspace="4" border="0" align="absmiddle" onClick="MM_openBrWindow('final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
-          <div class="chan-contain">
-                <div class="body">
-                  <ul class="chan">
-                    <li>Message Queue </li>
-                    <li>Service Registry </li>
-                    <li>Thread Pool </li>
-                  </ul>
-              </div>
-              </div>
-            </div></td>
-        <td class="content" valign="top"><div class="portlet">
-            <div class="header"> <span class="left">
-              <div class="portlet-title">
-                <h2 class="portlet-title">Workflow</h2>
-              </div>
-            </span> <span class="right"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" hspace="3" vspace="4" border="0" align="absmiddle" onClick="MM_openBrWindow('final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
-            <div class="chan-contain">
-              <div class="body">
-                <ul class="chan">
-                  <li>Application Constants </li>
-                  <li>Document Operation </li>
-                  <li><a href="kra-admin-wor-documenttype.html">Document Type</a> </li>
-                  <li><a href="kra-admin-wor-ruleattribute.html">Rule Attribute</a> </li>
-                  <li><a href="kra-admin-wor-ruletemplate.html">Rule Template</a> </li>
-                  <li><a href="kra-admin-wor-statisticsreport.html">Statistics Report</a> </li>
-                  <li><a href="kra-admin-wor-workgrouptype.html">Workgroup Type </a></li>
-                  <li><a href="kra-admin-wor-xmlingester.html">XML Ingester</a> </li>
-                </ul>
-              </div>
-          </div>
-        </div></td>
-      </tr>
-    </tbody>
-  </table>
-  <div class="footerbevel"> &nbsp;</div>
-  <div id="footer-copyright"> Copyright 2005-2006 The Kuali Foundation. All rights reserved. <br>
-    Portions of Kuali are copyrighted by other parties as described in the Acknowledgments screen. </div>
-</form>
-</body>
-</html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN""http://www.w3.org/TR/html4/loose.dtd"><head><title>3 Col Stretch</title><link href="css/portal.css" rel="stylesheet" type="text/css"><script type="text/javascript"><!--function MM_openBrWindow(theURL,winName,features) { //v2.0  window.open(theURL,winName,features);}//--></script></head><body><form  method="post" action="">  <div id="header">    <h1 class="kra"><span>Kuali</span></h1>  </div>  <div id="feedback"><a class="portal_link" href="https://test.kuali.org/jira/secure/CreateIssue.jspa?pid=10310&issuetype=1" target="_blank" title="Provide Feedback">Provide Feedback</a> </div>  <div id="build">build-172</div>  <div class="header2">    <div class="header2-left-focus">      <div class="breadcrumb-focus"><a href="#"><img src="images-portal/icon-port-actionlist.gif" alt="action list" hspace="2" border="0"></a><img src="images-portal/icon-port-docsearch.gif" alt="action list" width="96" height="19" hspace="2" border="0"></a></div>    </div>  </div>  <div id="login-info"> Logged in User: SCALLIS</div>  <!--   <div id="topcontrols"><input name="textfield" type="text" size="12" class="loginbox"><input name="imageField" src="images/tinybutton-login.gif" type="image" border="0" height="15" width="48" class="loginbutton">  </div> -->  <div id="search">    <input name="textfield" type="text" size="12" class="loginbox">    <input class="go" type="submit" name="Submit" value="login">  </div>  <div id="tabs" class="tabposition">    <ul>      <li class="green"><a class="green" href="kra-main.html">Main</a></li>      <li class="green"><a class="green" href="kra-mystuff2.html">My Stuff</a></li>      <li class="green"><a class="green" href="kra-maint.html">Maintenance</a></li>      <li class="red"><a class="red" href="kra-admin.html">Administration</a></li>    </ul>  </div>  <table id="iframe_portlet_container_table" border="0" cellpadding="0" cellspacing="0" width="100%">    <tbody>      <tr bgcolor="#ffffff" valign="top">        <td class="leftback-focus" width="15">&nbsp;</td>        <td class="content" valign="top"><div class="portlet">            <div class="header"> <span class="left">              <div class="portlet-title">                <h2 class="portlet-title">System</h2>              </div>            </span> <span class="right"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" hspace="3" vspace="4" border="0" align="absmiddle" onClick="MM_openBrWindow('final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>            <div class="chan-contain">              <div class="body">                <ul class="chan">                  <li><a href="kra-admin-EmployeeStatus.html">Employee Status</a> </li>                  <li><a href="kra-admin-EmployeeType.html">Employee Type</a> </li>                  <li><a href="kra-admin-MessageOfTheDay.html">Message Of The Day</a> </li>                  <li><a href="kra-admin-Parameter.html">Parameter</a> </li>                  <li><a href="kra-admin-ParameterComponent.html">Parameter Component</a> </li>                  <li><a href="kra-admin-ParameterModule.html">Parameter Module</a> </li>                  <li><a href="kra-admin-ParameterType.html">Parameter Type</a> </li>                  <li><a href="kra-admin-SystemOptions.html">System Options</a> </li>                  <li><a href="kra-admin-User.html">User</a> </li>                </ul>              </div>          </div>        </div></td>        <td class="content" valign="top"><div class="portlet">            <div class="header"> <span class="left">              <div class="portlet-title">                <h2 class="portlet-title">Batch</h2>              </div>            </span> <span class="right"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" hspace="3" vspace="4" border="0" align="absmiddle" onClick="MM_openBrWindow('final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>            <div class="chan-contain">              <div class="body">                <ul class="chan">                  <li><a href="kra-admin-batch-schedule.html">Batch Schedule</a></li>                </ul>              </div>          </div>        </div>        <div class="portlet"><div class="header"> <span class="left">            <div class="portlet-title">              <h2 class="portlet-title">Service Bus</h2>            </div>            </span> <span class="right"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" hspace="3" vspace="4" border="0" align="absmiddle" onClick="MM_openBrWindow('final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>          <div class="chan-contain">                <div class="body">                  <ul class="chan">                    <li>Message Queue </li>                    <li>Service Registry </li>                    <li>Thread Pool </li>                  </ul>              </div>              </div>            </div></td>        <td class="content" valign="top"><div class="portlet">            <div class="header"> <span class="left">              <div class="portlet-title">                <h2 class="portlet-title">Workflow</h2>              </div>            </span> <span class="right"><a href="#"><img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" hspace="3" vspace="4" border="0" align="absmiddle" onClick="MM_openBrWindow('final/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>            <div class="chan-contain">              <div class="body">                <ul class="chan">                  <li>Application Constants </li>                  <li>Document Operation </li>                  <li><a href="kra-admin-wor-documenttype.html">Document Type</a> </li>                  <li><a href="kra-admin-wor-ruleattribute.html">Rule Attribute</a> </li>                  <li><a href="kra-admin-wor-ruletemplate.html">Rule Template</a> </li>                  <li><a href="kra-admin-wor-statisticsreport.html">Statistics Report</a> </li>                  <li><a href="kra-admin-wor-workgrouptype.html">Workgroup Type </a></li>                  <li><a href="kra-admin-wor-xmlingester.html">XML Ingester</a> </li>                </ul>              </div>          </div>        </div></td>      </tr>    </tbody>  </table>  <div class="footerbevel"> &nbsp;</div>  <div id="footer-copyright"> Copyright 2005-2006 The Kuali Foundation. All rights reserved. <br>    Portions of Kuali are copyrighted by other parties as described in the Acknowledgments screen. </div></form></body></html>
